chore: add gradle run task